# repo

./: CMakeLists.txt
.github/workflows/: build.yml
resource/: index.html
resources/: AbsoluteMods.txt  custom.js  index.html  limit_fix1.js
resources/limons/: classic.html  premium.html
resources/weapons/: ak47.html  m4a1.html
src/: dllmain.cpp  dllmaincpp  main.cpp  resources.rc
